--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JATS - make your job search easier</title>
-</head>
+<%- include("./partials/head.ejs") %>
 <body>
   <h2 class="logo">JATS</h2>
 </body>
