Create navbar partial view and add to landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <%- include("./partials/head.ejs") %>
 <body>
-  <h2 class="logo">JATS</h2>
+  <%- include("./partials/navbar.ejs") %>
+  <h1>stay organized.
+    be motivated.
+    get hired.</h1>
 </body>
 </html>
