Add route to sign up

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
   <h2 class="logo">JATS</h2>
   <a href=""><button>Login</button></a>
-  <a href=""><button>Create Account</button></a>
+  <a href="/sign-up"><button>Create Account</button></a>
 </nav>
