--- a/views/account/new.ejs
+++ b/views/account/new.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/head.ejs") %>
 <body>
   <%- include("../partials/navbar.ejs") %>
-  <h1>Sign Up</h1>
+  <h1>Let's get you started by creating a new account</h1>
   <form action="/user/new" method="POST">
     <label for="firstName">First Name</label>
     <input type="text" id="firstName" name="firstName" placeholder="Enter first name here">
@@ -11,6 +11,7 @@
     <input type="email" id="email" name="email" placeholder="Your email here">
     <label for="password">Password</label>
     <input type="password" id="password" name="password" placeholder="Password goes here">
+    <input type="submit" value="Sign up">
   </form>
 </body>
 </html>
