--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-  <h2 class="logo">JATS</h2>
-  <a href=""><button>Login</button></a>
-  <a href="/sign-up"><button>Create Account</button></a>
+  <a href="/"><h2 class="nav-brand">JATS</h2></a>
+  <a href="/login"><button>Login</button></a>
+  <a href="/create-account"><button>Create Account</button></a>
 </nav>
