Create controller directory and add routes for sign in, sign up and create profile in auth.js

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,6 +1,6 @@
-<%- include("../partials/head.ejs") %>
+<%- include("../../views/partials/head.ejs") %>
 <body>
-  <%- include("../partials/navbar.ejs") %>
+  <%- include("../../views/partials/navbar.ejs") %>
   <h1 class="logo">JATS</h1>
   <form action="/user/new" method="POST">
     <label for="email">Email</label>
