--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,6 +1,6 @@
-<%- include("../partials/head.ejs") %>
+<%- include("../../views/partials/head.ejs") %>
 <body>
-  <%- include("../partials/navbar.ejs") %>
+  <%- include("../../views/partials/navbar.ejs") %>
   <h1>Let's get you started by creating a new account</h1>
   <form action="/user/new" method="POST">
     <label for="firstName">First Name</label>
