--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
   <a href="/"><h2 class="nav-brand">JATS</h2></a>
-  <a href="/login"><button>Login</button></a>
-  <a href="/new/create-account"><button>Create Account</button></a>
+  <a href="/auth/sign-in"><button>Sign in</button></a>
+  <a href="/auth/sign-up"><button>Create Account</button></a>
 </nav>
