--- a/views/user/create-profile.ejs
+++ b/views/user/create-profile.ejs
@@ -1,6 +1,6 @@
-<%- include("../partials/head.ejs") %>
+<%- include("../../views/partials/head.ejs") %>
 <body>
-  <%- include("../partials/navbar.ejs") %>
+  <%- include("../../views/partials/navbar.ejs") %>
   <h1>Just need a few more information about you...</h1>
   <form action="/user/new" method="POST">
     <label for="firstName">What is your desired position?</label>
