--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,8 +1,8 @@
 <%- include("../../views/partials/head.ejs") %>
 <body>
   <%- include("../../views/partials/navbar.ejs") %>
-  <h1>Let's get you started by creating a new account</h1>
-  <form action="/user/new" method="POST">
+  <h1>Let's get you started by creating an account</h1>
+  <form action="/auth/sign-up" method="POST">
     <label for="firstName">First Name</label>
     <input type="text" id="firstName" name="firstName" placeholder="Enter first name here">
     <label for="lastName">Last Name</label>
@@ -10,7 +10,13 @@
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="Your email here">
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" placeholder="Password goes here">
+    <input type="password" id="password" name="password" placeholder="Password here">
+    <label for="confirmPassword">Confirm Password</label>
+    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password here">
+    <label for="desiredPosition">What is your desired position?</label>
+    <input type="text" id="desiredPosition" name="desiredPosition" placeholder="Enter first name here">
+    <label for="location">Current Location or Preferred Location</label>
+    <input type="text" id="location" name="location" placeholder="Enter last name here">
     <input type="submit" value="Sign up">
   </form>
 </body>
