Implement user login functionality

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -2,7 +2,7 @@
 <body>
   <%- include("../../views/partials/navbar.ejs") %>
   <h1 class="logo">JATS</h1>
-  <form action="/user/new" method="POST">
+  <form action="/auth/sign-in" method="POST">
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="Enter email">
     <label for="password">Password</label>
