--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,5 @@
 <nav>
-  <h2 class="logo">JATS</h2>
+  <a href="/"><h2 class="logo">JATS</h2></a>
   <ul class="nav-links">
     <li><a href="" class="navlink">Dashboard</a></li>
     <li><a href="" class="navlink">Applications</a></li>
