--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,4 +5,5 @@
     <li><a href="" class="navlink">Applications</a></li>
     <li><a href="" class="navlink">Job Board</a></li>
   </ul>
+  <a href="/auth/sign-out"><button>Sign out</button></a>
 </nav>
