--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/head.ejs") %>
 <body>
   <%- include("./partials/sidebar.ejs") %>
-  <h1>Welcome back, Name</h1>
+  <h1>Welcome back, <%= foundUser.firstName %></h1>
 </body>
 </html>
