Add applications show page

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,8 +1,8 @@
 <nav>
   <a href="/"><h2 class="logo">JATS</h2></a>
   <ul class="nav-links">
-    <li><a href="" class="navlink">Dashboard</a></li>
-    <li><a href="" class="navlink">Applications</a></li>
+    <li><a href="/dashboard" class="navlink">Dashboard</a></li>
+    <li><a href="/applications" class="navlink">Applications</a></li>
     <li><a href="" class="navlink">Job Board</a></li>
   </ul>
   <a href="/auth/sign-out"><button>Sign out</button></a>
