Add ability to add a new application entry

--- a/views/applications/new.ejs
+++ b/views/applications/new.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/head.ejs") %>
 <body>
   <%- include("../partials/sidebar.ejs") %>
-  <form action="/applications/new" method="POST">
+  <form action="/application/new" method="POST">
     <label for="companyName">Company</label>
     <input id="companyName" name="companyName" type="text" placeholder="e.g Google">
     <label for="positionTitle">Position</label>
