Add ability to edit an application entry

--- a/views/applications/new.ejs
+++ b/views/applications/new.ejs
@@ -9,9 +9,9 @@
     <label for="status">Application Status</label>
     <select class="status-selections" id="status" name="status">
       <option value="">Set a status</option>
-      <option value="applied" class="applied">Applied</option>
-      <option value="interested" class="interested">Interested</option>
-      <option value="Interviewing" class="interviewing">Interviewing</option>
+      <option value="Applied" class="applied">Applied</option>
+      <option value="Interested" class="Interested">Interested</option>
+      <option value="Interviewing" class="Interviewing">Interviewing</option>
     </select>
     <label for="jobRequirements">Any Job Requirements</label>
     <textarea id="jobRequirements" name="jobRequirements" cols="40" rows="10"  placeholder="e.g Requires experience in the following: Microservices; Apache Kafka; Docker; J2EE; Spring; REST; SOAP; Maven; JSON; and GIT."></textarea>
