Add back button to multiple application pages

--- a/views/applications/edit.ejs
+++ b/views/applications/edit.ejs
@@ -19,19 +19,6 @@
     <textarea id="notes" name="notes" cols="40" rows="10" placeholder="e.g A buddy recommended this opportunity to me. TODO: need to follow up"><%= application.notes %></textarea>
     <input type="submit" value="Edit Application">
   </form>
-
-
-
-
-
-  <!-- <h1><%= application.companyName %></h1>
-  <a href="/application/<%=application._id%>/edit">Edit ✎</a>
-  <h2><%= application.positionTitle %></h2>
-  <h3>Application Status</h3>
-  <p><%= application.status %></p>
-  <h3>Job Requirements</h3>
-  <p><%= application.jobRequirements %></p>
-  <h3>Notes</h3>
-  <p><%= application.notes %></p> -->
+  <a href="/application/<%=application._id%>"><button>◀︎</button></a>
 </body>
 </html>
