--- a/views/applications/show.ejs
+++ b/views/applications/show.ejs
@@ -10,5 +10,6 @@
   <p><%= application.jobRequirements %></p>
   <h3>Notes</h3>
   <p><%= application.notes %></p>
+  <a href="/application"><button>◀︎</button></a>
 </body>
 </html>
