Add stylesheet to app

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/stylesheets/styles.css" rel="stylesheet">
   <title>JATS - make your job search easier</title>
 </head>
