--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,17 @@
 <%- include("./partials/head.ejs") %>
-<body>
-  <%- include("./partials/navbar.ejs") %>
-  <h1>stay organized.
-    be motivated.
-    get hired.</h1>
-</body>
-</html>
+
+  <body>
+    <%- include("./partials/navbar.ejs") %>
+      <header class="hero">
+        <div class="hero-text">
+          <h1 class="hero-title">
+            Stay organized
+            <span>Be motivated</span>
+            <span>Get hired.</span>
+          </h1>
+        </div>
+        <div></div>
+      </header>
+  </body>
+
+  </html>
