--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,6 +8,149 @@ body {
   margin: 0;
   padding: 0;
   font-family: Inter, -apple-system, sans-serif;
+  background-color: #101010;
+  color: #fafafa;
+}
+
+/* NAV */
+
+nav {
+  display: flex;
+  width: 100%;
+  height: 90px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 158px;
+  position: absolute;
+}
+
+.nav-brand {
+  color: #fafafa;
+  text-decoration: none;
+}
+
+.nav-brand h2 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 800;
+  font-size: 32px;
+}
+
+.nav-btns button {
+  color: #fafafa;
+  border: 1px solid #727272;
+  border-radius: 20px;
+  background-color: transparent;
+  padding: 10px 12px;
+}
+
+.nav-btns button:hover {
+  cursor: pointer;
+  border: transparent;
+  background: rgb(26,92,43);
+  background: linear-gradient(120deg, rgb(30, 105, 49) 20%, rgba(53,184,60,1) 100%);
+}
+
+@media (max-width: 1000px) {
+  nav {
+    padding: 0 50px;
+  }
+}
+
+/* HERO */
+
+.hero {
+  display: flex;
+  align-items: center;
+  color: #ececec;
+  font-size: 2.5rem;
+  height: 650px;
+  padding: 0 150px;
+  padding-top: 100px;
+  gap: 100px;
+}
+
+.hero div:last-child {
+  width: 100%;
+  height: 500px;
+  background-color: #e2e2e2;
+}
+
+.hero-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.hero-title span {
+  display: block;
+}
+
+.hero-title span:last-child {
+  background: -webkit-linear-gradient(#eee, #333);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* SIGN-IN */
+
+.sign-in-form, .sign-up-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 800;
+  font-size: 74px;
+}
+
+.box {
+  position: relative;
+  top: 137px;
+  left: 22px;
+  z-index: -1;
+  background-color: #333;
+  padding: 55px;
+}
+
+.sign-in-form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #727272;
+  border-radius: 2px;
+  padding: 20px;
+  width: 300px;
+  height: 300px;
+  gap: 15px;
+}
+
+input {
+  padding: 10px;
+  font-weight: 600;
+}
+
+input[type="submit"]:hover {
+  cursor: pointer;
+}
+
+/* SIGN UP */
+.sign-up-form {
+  padding-top: 100px;
+  margin-bottom: 60px;
+}
+
+.sign-up-form h1 {
+  text-align: center;
+}
+
+.sign-up-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 textarea {
