--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,13 +1,18 @@
 <%- include("../../views/partials/head.ejs") %>
-<body>
-  <%- include("../../views/partials/navbar.ejs") %>
-  <h1 class="logo">JATS</h1>
-  <form action="/auth/sign-in" method="POST">
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="Enter email">
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" placeholder="Enter password">
-    <input type="submit" value="Sign in">
-  </form>
-</body>
-</html>
+
+  <body>
+    <%- include("../../views/partials/navbar.ejs") %>
+      <div class="sign-in-form">
+        <div class="box"></div>
+        <h1 class="logo">jAts</h1>
+        <form action="/auth/sign-in" method="POST">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter email">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter password">
+          <input type="submit" value="Sign in">
+        </form>
+      </div>
+  </body>
+
+  </html>
