--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,9 +1,9 @@
-<nav>
-  <a href="/"><h2 class="logo">JATS</h2></a>
+<nav class="nav-sidebar">
+  <h2 class="sidebar-logo"><a href="/">jAts</a></h2>
   <ul class="nav-links">
-    <li><a href="/dashboard" class="navlink">Dashboard</a></li>
-    <li><a href="/application" class="navlink">Applications</a></li>
-    <li><a href="" class="navlink">Job Board</a></li>
+    <li><a href="/dashboard" class="nav-link">Dashboard</a></li>
+    <li><a href="/application" class="nav-link">Applications</a></li>
+    <li><a href="" class="nav-link">Job Board</a></li>
   </ul>
-  <a href="/auth/sign-out"><button>Sign out</button></a>
+  <a class="sign-out-btn" href="/auth/sign-out"><button>Sign out</button></a>
 </nav>
