--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -1,29 +1,45 @@
 <%- include("../partials/head.ejs") %>
-<body>
-  <%- include("../partials/sidebar.ejs") %>
-  <h1>My Applications</h1>
-  <div class="application-list-container">
-    <table class="application-table">
-      <thead>
-        <tr class="table-header">
-          <th>Company</th>
-          <th>Position</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% applications.forEach(application => { %>
-          <tr class="application-entry">
-            <td><%= application.companyName %></td>
-            <td><%= application.positionTitle %></td>
-            <td class="application-status"><%= application.status %></td>
-            <td><a href="/application/<%=application._id%>">View</a></td>
-            <td><form action="/application/<%=application._id%>?_method=DELETE" method="POST"><input type="submit" value="Delete ✕"></form></td>
-          </tr>
-        <% }) %>
-      </tbody>
-    </table>
-    <a href="/application/new"><button>Add an Application</button></a>
-  </div>
-</body>
-</html>
+
+  <body>
+    <main class="dashboard-container">
+      <%- include("../partials/sidebar.ejs") %>
+        <div class="user-content-container">
+          <h1>My Applications</h1>
+          <div class="application-list-container">
+            <table class="application-table">
+              <thead>
+                <tr>
+                  <th class="table-heading">Company</th>
+                  <th class="table-heading">Position</th>
+                  <th class="table-heading">Status</th>
+                  <th class="table-heading-view"></th>
+                  <th class="table-heading-delete"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% applications.forEach(application=> { %>
+                  <tr class="application-entry">
+                    <td>
+                      <%= application.companyName %>
+                    </td>
+                    <td>
+                      <%= application.positionTitle %>
+                    </td>
+                    <td class="application-status">
+                      <%= application.status %>
+                    </td>
+                    <td class="view-link"><a href="/application/<%=application._id%>"><button><i class="fa-regular fa-eye"></i></button></a></td>
+                    <td>
+                      <form action="/application/<%=application._id%>?_method=DELETE" method="POST"><button><i class="fa-solid fa-trash"></i></button></form>
+                    </td>
+                  </tr>
+                  <% }) %>
+              </tbody>
+            </table>
+          </div>
+          <a href="/application/new"><button>Add an Application</button></a>
+        </div>
+    </main>
+  </body>
+
+  </html>
