--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -39,7 +39,7 @@
                           </td>
                           <% } else { %>
                             <td class="status">
-                              <div class="application-status">N/A</div>
+                              <div class="application-status">None</div>
                             </td>
                             <% } %>
                               <td class="view-link"><a href="/application/<%=application._id%>"><button><i
