--- a/views/applications/new.ejs
+++ b/views/applications/new.ejs
@@ -9,7 +9,7 @@
     <label for="positionTitle">Position</label>
     <input id="positionTitle" name="positionTitle" type="text" placeholder="e.g Software Engineer" required>
     <label for="status">Application Status</label>
-    <select class="status-selections" id="status" name="status" required>
+    <select class="status-selections" id="status" name="status">
       <option value="">Set a status</option>
       <option value="Applied" class="applied">Applied</option>
       <option value="Interested" class="Interested">Interested</option>
