--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -7,9 +7,9 @@
         <h1 class="logo">jAts</h1>
         <form action="/auth/sign-in" method="POST">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="Enter email">
+          <input type="email" id="email" name="email" placeholder="Enter email" required>
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter password">
+          <input type="password" id="password" name="password" placeholder="Enter password" required>
           <input type="submit" value="Sign in">
         </form>
       </div>
