--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -4,7 +4,7 @@
     <main class="dashboard-container">
       <%- include("../partials/sidebar.ejs") %>
         <div class="user-content-container">
-          <h1>My Applications</h1>
+          <h1 class="application-home-heading">My Applications</h1>
           <div class="application-list-container">
             <table class="application-table">
               <thead>
