--- a/views/applications/edit.ejs
+++ b/views/applications/edit.ejs
@@ -1,7 +1,10 @@
 <%- include("../partials/head.ejs") %>
 <body>
+  <main class="dashboard-container">
   <%- include("../partials/sidebar.ejs") %>
-  <form action="/application/<%=application._id%>/edit?_method=PUT" method="POST">
+  <div class="user-content-container">
+  <form class="application-form" action="/application/<%=application._id%>/edit?_method=PUT" method="POST">
+    <div class="form-card">
     <label for="companyName">Company</label>
     <input id="companyName" name="companyName" type="text" placeholder="e.g Google" value="<%= application.companyName %>" required>
     <label for="positionTitle">Position</label>
@@ -13,12 +16,17 @@
       <option value="Interested" class="Interested">Interested</option>
       <option value="Interviewing" class="Interviewing">Interviewing</option>
     </select>
+  </div>
+    <div class="form-card">
     <label for="jobRequirements">Job Requirements</label>
     <textarea id="jobRequirements" name="jobRequirements" cols="40" rows="10"  placeholder="e.g Requires experience in the following: Microservices; Apache Kafka; Docker; J2EE; Spring; REST; SOAP; Maven; JSON; and GIT."><%= application.jobRequirements %></textarea>
     <label for="notes">Notes</label>
     <textarea id="notes" name="notes" cols="40" rows="10" placeholder="e.g A buddy recommended this opportunity to me. TODO: need to follow up"><%= application.notes %></textarea>
     <input type="submit" value="Edit Application">
+  </div>
   </form>
-  <a href="/application/<%=application._id%>"><button>◀︎</button></a>
+  <a href="/application/<%=application._id%>" class="back-btn"><button><i class="fa-solid fa-chevron-left"></i> <span class="back-txt">Back to <%=application.companyName%> Application</span></button></a>
+</div>
+</main>
 </body>
 </html>
