--- a/views/applications/show.ejs
+++ b/views/applications/show.ejs
@@ -2,7 +2,7 @@
 <body>
   <main class="dashboard-container">
   <%- include("../partials/sidebar.ejs") %>
-  <div class="user-content-container">
+  <div class="user-content-container mobile">
     <h1 class="company-name"><%= application.companyName %></h1>
   <a class="update-btn" href="/application/<%=application._id%>/edit"><i class="fa-solid fa-pen-to-square"></i> <span class="update-txt">Update</span></a>
   <h2 class="position-title"><%= application.positionTitle %></h2>
