--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -148,6 +148,12 @@ h2.sidebar-logo {
     padding: 0;
     font-size: 14px;
   }
+
+  .main-dashboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* HERO */
@@ -247,6 +253,39 @@ input[type="submit"]:hover {
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+
+/* DASHBOARD */
+
+.dashboard-greeting {
+  font-weight: 500;
+}
+
+.goal-tracker {
+  font-weight: normal;
+  padding-top: 25px;
+}
+
+.animate-counter {
+  font-weight: bold;
+  color: #191919;
+  background-color: #3fd27c;
+  padding: 3px 12px;
+  border: 3px solid #18191C;
+  border-radius: 30%;
+}
+
+.progress-counter {
+  font-weight: bold;
+  color: #191919;
+  background-color: #d0dbe7;
+  padding: 3px 12px;
+  border: 3px solid #18191C;
+  border-radius: 30%;
+}
+
+.target {
+  font-weight: bold;
 }
 
 /* APPLICATIONS */
@@ -420,6 +459,13 @@ textarea {
   font-weight: 600;
   white-space: inherit;
   overflow-wrap: break-word;
+  resize: none;
+}
+
+#datePosted {
+  color: #fafafa;
+  background-color: transparent;
+  border: none;
 }
 
 .new-application-form button {
