--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -257,13 +257,60 @@ input[type="submit"]:hover {
 
 /* DASHBOARD */
 
+.main-dashboard {
+  display: flex;
+  gap: 10px;
+}
+
 .dashboard-greeting {
   font-weight: 500;
 }
 
+.goals-container {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  background-color: #18191C;
+  border: 1px solid #525356;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.jobs-applied-for {
+  display: flex;
+  justify-content: space-between;
+  color: #fafafa;
+  padding: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #525356;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.jobs-applied-for button {
+  background-color: transparent;
+  border: none;
+  color: #75c4f5;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.jobs-applied-for button:hover {
+  cursor: pointer;
+  transition: 0.4s;
+  transform: scale(1.1);
+}
+
 .goal-tracker {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  font-size: 18px;
   font-weight: normal;
-  padding-top: 25px;
+  padding: 25px;
+  background-color: #18191C;
+  border: 1px solid #525356;
+  border-radius: 10px;
 }
 
 .animate-counter {
@@ -288,6 +335,18 @@ input[type="submit"]:hover {
   font-weight: bold;
 }
 
+.quote-container {
+  width: 40%;
+}
+
+.quote {
+  text-align: center;
+  padding: 25px;
+  background-color: #626670;
+  border: 1px solid #525356;
+  border-radius: 10px;
+}
+
 /* APPLICATIONS */
 
 .user-content-container {
@@ -302,7 +361,7 @@ input[type="submit"]:hover {
 
 .application-list-container {
   width: 100%;
-  border: 1px solid #3B4358;
+  border: 1px solid #525356;
   border-radius: 7px;
   background-color: #18191C;
 }
@@ -313,8 +372,8 @@ input[type="submit"]:hover {
 }
 
 tr, td {
-  border-right: 1px solid #3B4358;
-  border-bottom: 1px solid #3B4358;
+  border-right: 1px solid #525356;
+  border-bottom: 1px solid #525356;
   padding: 9px 0px 9px 9px;
 }
 
@@ -323,18 +382,18 @@ tr, td {
   font-size: 15px;
   text-align: start;
   padding: 9px;
-  border-right: 1px solid #3B4358;
-  border-bottom: 1px solid #3B4358;
+  border-right: 1px solid #525356;
+  border-bottom: 1px solid #525356;
 }
 
 .table-heading-view {
   border-right: none;
-  border-bottom: 1px solid #3B4358;
+  border-bottom: 1px solid #525356;
 }
 
 .table-heading-delete {
   border-right: none;
-  border-bottom: 1px solid #3B4358;
+  border-bottom: 1px solid #525356;
 }
 
 td.status {
@@ -393,32 +452,32 @@ td.status {
 .view-link {
   text-align: center;
   padding: 0;
-  border-bottom: 1px solid #3B4358;
+  border-bottom: 1px solid #525356;
 }
 
 .view-link button {
   background-color: transparent;
   border: none;
-  color: #75b5f5;
+  color: #75c4f5;
   text-decoration: none;
   font-size: 16px;
 }
 
 .view-link button:hover {
   cursor: pointer;
-  transition: 0.8s;
+  transition: 0.4s;
   transform: scale(1.1);
 }
 
 .application-entry td:last-child {
   text-align: center;
   border-right: none;
-  border-bottom: 1px solid #3B4358;
+  border-bottom: 1px solid #525356;
 }
 
 .application-entry td:last-child button {
   font-size: 15.4px;
-  color: #75b5f5;
+  color: #75c4f5;
   background-color: transparent;
   border: none;
 }
