--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,31 +3,52 @@
   <body>
     <main class="dashboard-container">
       <%- include("./partials/sidebar.ejs") %>
-        <div class="user-content-container">
-          <div class="main-dashboard">
-          <h1 class="dashboard-greeting">Welcome back, <%= user.firstName %></h1>
+      <div class="user-content-container">
+        <h1 class="dashboard-greeting">Welcome back, <%= user.firstName %></h1>
+        <div class="main-dashboard">
+          <div class="goals-container">
           <% const dailyTarget = 30 %>
           <% let postCounter = 0 %>
+
           <!-- count amount of applications posted within a date -->
           <% const date = new Date() %>
           <% const formatDate = date.toLocaleDateString() %>
           <% let postDate = null %>
+
           <% applications.forEach(application => { %>
             <% if (application.datePosted) { %>
-            <!-- format application post date -->
-            <% postDate = application.datePosted %>
-            <% postDate = postDate.toLocaleDateString() %>
-            <% if (formatDate === postDate) { %>
-              <% postCounter++ %>
+              <!-- format application post date -->
+              <% postDate = application.datePosted %>
+              <% postDate = postDate.toLocaleDateString() %>
+              <% if (formatDate === postDate && application.status === "Applied") { %>
+                <% postCounter++ %>
+              <% } %>
             <% } %>
-           <% } %>
           <% }) %>
-          <% // Show message to user based on whether target goal was met or not %>
+
           <% if (postCounter === dailyTarget) { %>
             <h2 class="goal-tracker">Daily Goal: <span class="animate-counter"><%= postCounter %></span> out of <span class="target"><%= dailyTarget %></span></h2>
           <% } else { %>
             <h2 class="goal-tracker">Daily Goal: <span class="progress-counter"><%= postCounter %></span> out of <span class="target"><%= dailyTarget %></span></h2>
           <% } %>
+
+          <h3>Recent Jobs You've Applied To</h3>
+          <% for (let i = applications.length - 1; i >= 0; i--) { %>
+            <% if (i > applications.length - 5) { %>
+              <% if (applications[i].status === "Applied") { %>
+                <div class="jobs-applied-for"><%=applications[i].companyName%> <span><a href="/application/<%=applications[i]._id%>"><button><i
+                  class="fa-regular fa-eye"></i></button></a></span></div>
+              <% } %>
+            <% } %>
+          <% } %>
+          </div>
+
+          <div class="quote-container">
+              <h3>Motivational Quotes</h3>
+              <p class="quote">
+                <%= randomQuote[0].quoteText %>
+              </p>
+          </div>
         </div>
       </div>
     </main>
