Fix issue where users are able to see other users data when signed in

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -13,6 +13,18 @@ body, main {
   height: 100vh;
 }
 
+a {
+  color: #fafafa;
+}
+
+a:hover{
+  text-decoration: none;
+}
+
+.hidden {
+  display: none;
+}
+
 /* NAV */
 
 nav {
