--- a/views/applications/index.ejs
+++ b/views/applications/index.ejs
@@ -17,6 +17,7 @@
                 </tr>
               </thead>
               <tbody>
+                <% if (applications) { %>
                 <% applications.forEach(application=> { %>
                   <tr class="application-entry">
                     <td>
@@ -50,6 +51,7 @@
                               </td>
                   </tr>
                   <% }) %>
+                  <% } %>
               </tbody>
             </table>
           </div>
