Add hero image and make it responsive

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,8 @@
             <span>Get hired.</span>
           </h1>
         </div>
-        <div></div>
+        <div class="hero-img">
+        </div>
       </header>
   </body>
 
