--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -175,16 +175,26 @@ h2.sidebar-logo {
   align-items: center;
   color: #ececec;
   font-size: 2.5rem;
-  height: 650px;
-  padding: 0 150px;
+  padding: 100px 150px 50px 150px;
   padding-top: 100px;
   gap: 100px;
+}
+
+@media (max-width: 1000px) {
+  .hero {
+    flex-direction: column;
+    padding: 80px 20px;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .hero div:last-child {
   width: 100%;
   height: 500px;
-  background-color: #e2e2e2;
+  background: url("https://images.unsplash.com/photo-1588064643233-49210b27b82e?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-text {
