--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,16 @@
 
   <body>
     <%- include("./partials/navbar.ejs") %>
-      <header class="hero">
-        <div class="hero-text">
-          <h1 class="hero-title">
-            Stay organized
-            <span>Be motivated</span>
-            <span>Get hired.</span>
-          </h1>
-        </div>
-        <div class="hero-img">
-        </div>
-      </header>
+    <header class="hero">
+      <div class="hero-text">
+        <h1 class="hero-title">
+          Stay organized
+          <span>Be motivated</span>
+          <span>Get hired.</span>
+        </h1>
+      </div>
+      <div class="hero-img"></div>
+    </header>
   </body>
 
   </html>
