Fix truncation issue with smaller devices

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
           <span>Get hired.</span>
         </h1>
       </div>
-      <div class="hero-img"></div>
+      <div>
+        <div class="hero-img"></div>
+      </div>
     </header>
   </body>
 
