Remove Quote Garden API due to suspended service

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -52,12 +52,12 @@
           <% } %>
         </div>
 
-        <div class="quote-container">
+        <!-- <div class="quote-container">
             <h3>Motivational Quotes</h3>
             <p class="quote">
               <%= randomQuote[0].quoteText %>
             </p>
-        </div>
+        </div> -->
       </div>
     </div>
   </main>
