--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,4 +5,5 @@
 :root {
   font-family: "Hanken Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #0B0B0B;
+  color: #FEFEFE;
 }
